plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'idea'
}
version = rootProject.mod_version
group = rootProject.mod_group_id
base { archivesName = "nstutlib-neoforge-${rootProject.minecraft_version_26_1_2}" }
java { toolchain.languageVersion = JavaLanguageVersion.of(25); withSourcesJar() }
neoForge {
    version = rootProject.neoforge_version_26_1_2
    runs {
        client { client() }
        server { server(); programArgument '--nogui' }
        gameTestServer { type = 'gameTestServer' }
        configureEach { logLevel = org.slf4j.event.Level.INFO }
    }
    mods { "${rootProject.mod_id}" { sourceSet(sourceSets.main) } }
    unitTest {
        enable()
        testedMod = mods."${rootProject.mod_id}"
    }
}
dependencies {
    compileOnly "org.projectlombok:lombok:${rootProject.lombok_version}"
    annotationProcessor "org.projectlombok:lombok:${rootProject.lombok_version}"
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
test {
    useJUnitPlatform()
    testLogging {
        events 'failed'
        exceptionFormat = 'full'
        showStandardStreams = true
    }
}
def generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    def p = [mod_id: rootProject.mod_id, mod_name: rootProject.mod_name, mod_version: rootProject.mod_version,
             mod_description: rootProject.mod_description, mod_authors: rootProject.mod_authors, mod_license: rootProject.mod_license,
             minecraft_version_range: rootProject.minecraft_version_range_26_1_2, neo_version: rootProject.neoforge_version_26_1_2]
    inputs.properties p; expand p; from 'src/main/templates'; into layout.buildDirectory.dir('generated/sources/modMetadata')
}
sourceSets.main.resources.srcDir(generateModMetadata)
neoForge.ideSyncTask(generateModMetadata)
tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }
publishing { publications { mavenJava(MavenPublication) { from components.java; artifactId = base.archivesName.get() } } }
